# my_first_project

./: API.rst  LICENSE  README.rst  micc.json  my_first_project.py  pyproject.toml
docs/: Makefile  conf.py  index.rst
tests/: __init__.py  test_my_first_project.py
