[tool.poetry]
name = "my_first_project"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Dimitri De Waele <dimitri.dewaele@student.uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/UADDW/my_first_project"
homepage = "https://github.com/UADDW/my_first_project"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
